--- a/EjercicioDado/index.html
+++ b/EjercicioDado/index.html
@@ -1,3 +1,11 @@
+<!-- Escribir un script que simule el lanzamiento de un dado . Hacer uso de la función Math.random para obtener números aleatorios entre 1 y 6 para el lanzamiento del dado.
+Cuando se cargue a pagina , al pulsar un botón o al dobleclick con el ratón o pulsar una tecla se debe efectuar el lanzamiento de un dado y el resultado se debe mostrar en la pagina
+La página debe mostrar los lanzamientos anteriores
+Al pulsar un botón o cualquier otro evento que desee se debe mostrar los lanzamientos realizados ordenandos de menor a mayor
+Por último, debe mostrar un array en la que en la posición 0 se muestren las veces que ha aparecido el 1, en la posición 1 se muestren las veces que ha aparecido el 2 y así hasta el 6. Vincúlelo a un evento distinto al del apartado anterior
+
+ -->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
