Agregando dado animado

--- a/EjercicioDado/index.html
+++ b/EjercicioDado/index.html
@@ -18,13 +18,13 @@
                 <div class="col-5"></div>
                 <div class="col-2"> 
                     <a type="button" class="btn btn-primary botonTirar" onclick="tirarDado()" >Tirar dado</a>
+                    
                 </div>
             </div>
             <div class="row">
                 <div class="col-5"></div>
                 <div class="col-2 imagenDado" >
-                    <img class="imagenDado" src="" alt="">
-                    <h2 class="resultadoDado"></h2>
+                    <img class="dado" src="./img/dadoDefault.png" alt="">
                 </div>
             </div>
             <div class="row">
