--- a/EjercicioDado/index.html
+++ b/EjercicioDado/index.html
@@ -23,14 +23,14 @@ Por último, debe mostrar un array en la que en la posición 0 se muestren las v
     <main>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-5"></div>
+                <div class="col-4 col-md-5"></div>
                 <div class="col-2"> 
-                    <a type="button" class="btn btn-primary botonTirar" onclick="tirarDado()" >Tirar dado</a>
+                    <a type="button" class="btn btn-primary botonTirar" onclick="tirarDado()">Tirar dado</a>
                     
                 </div>
             </div>
             <div class="row">
-                <div class="col-5"></div>
+                <div class="col-4 col-md-5"></div>
                 <div class="col-2 imagenDado" >
                     <img class="dado" src="./img/dadoDefault.png" alt="">
                 </div>
