--- a/Examen EJSTUDIA/Examen JS - EJStudia/index.html
+++ b/Examen EJSTUDIA/Examen JS - EJStudia/index.html
@@ -12,7 +12,7 @@
   <script>
     var horasDeClase = 1000;
     var estudiante = new Estudiante();
-    var agobio = true
+    var agobio = true;
     var registroEstudio = [];
     var actualizar;
     var valorFinal;
@@ -129,8 +129,8 @@
           }
         }
       });
-
     }
+
     function levantarListeners() {
       document.addEventListener('keydown', function (e) {
         e.preventDefault();
